--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="Css\HomePageccs.css">
+    <link rel="stylesheet" href="HomePageccs.css">
   </head>
   <body>
     <header>
