--- a/Catergoies.html
+++ b/Catergoies.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<link rel="stylesheet" href="C:\Users\User\OneDrive - Asia Pacific Institute of Information Technology\School Websites\Assignment.Turtle.Website\Catergoiescss.css">
+<link rel="stylesheet" href="Catergoiescss.css">
   <head>
     <meta charset="utf-8">
     <title></title>
