--- a/Hikkaduwa.html
+++ b/Hikkaduwa.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="Css\Hikkaduwa.css">
+    <link rel="stylesheet" href="Hikkaduwa.css">
     <title>Hikkaduwa Turtle Hatchery</title>
   </head>
   <body>
