Update Threats to Turtles.html

--- a/Threats to Turtles.html
+++ b/Threats to Turtles.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Threats to Turtles</title>
-  <link rel="stylesheet" type="text/css" href="C:\Users\User\OneDrive - Asia Pacific Institute of Information Technology\School Websites\Assignment.Turtle.Website\Css\Threats to Turtles.css">
+  <link rel="stylesheet" type="text/css" href="Threats to Turtles.css">
 </head>
 <body>
   <header>
