--- a/CatergoiesFrame.html
+++ b/CatergoiesFrame.html
@@ -134,7 +134,7 @@ tbody:nth-child(even) {
         Green Turtles are herbivores and primarily feed on seagrasses, algae, and other marine plants.
         They are also known to migrate thousands of kilometers between their nesting and feeding grounds, making them an important component of the marine ecosystem.
     </p></td>
-    <td><img src="media\green-turtles.jpg" alt="Green Turtle" class="imgen"></td>
+    <td><img src="green-turtles.jpg" alt="Green Turtle" class="imgen"></td>
   </tr>
 </tbody>
 </table>
@@ -153,7 +153,7 @@ tbody:nth-child(even) {
        However, hawksbill turtles face various threats, including habitat loss, pollution, and hunting for their shells, which are used in jewelry and other decorative items.
        Despite the challenges they face, conservation efforts have helped to increase the hawksbill turtle population in Sri Lanka, giving hope for the future of these magnificent creatures.
     </td>
-    <td><img src="media\hawks-bill.jpg" alt="Hawksbill Turtle" class="imgen"></td>
+    <td><img src="hawks-bill.jpg" alt="Hawksbill Turtle" class="imgen"></td>
   </tr>
 </tbody>
 </table>
@@ -170,7 +170,7 @@ tbody:nth-child(even) {
        During this process, thousands of females come ashore simultaneously to lay their eggs, which provides a natural defense mechanism against predators.
       Olive Ridley Turtles are omnivores, feeding on a variety of marine animals including crabs, shrimp, and jellyfish.
     <p></td>
-    <td><img src="media\olive-ridley.jpg" alt="Olive Ridley Turtle" class="imgen"></td>
+    <td><img src="olive-ridley.jpg" alt="Olive Ridley Turtle" class="imgen"></td>
   </tr>
 </tbody>
 </table>
@@ -192,7 +192,7 @@ tbody:nth-child(even) {
           Additionally, loggerhead turtles are also important indicators of the health of the marine environment.
           Their presence or absence can signal changes in the ocean's temperature, quality of water, and other ecological factors.
           Conservation efforts are ongoing in Sri Lanka to protect these amazing creatures and ensure their survival for future generations.</td>
-          <td><img src="media\loggerhead.jpg" alt="Green Turtle" class="imgen"></td>
+          <td><img src="loggerhead.jpg" alt="Green Turtle" class="imgen"></td>
   </tr>
 </tbody>
 </table>
@@ -211,7 +211,7 @@ tbody:nth-child(even) {
       Additionally, Leatherbacks are known for their impressive ability to dive deep into the ocean to forage for food, with the deepest recorded dive being over 1,200 meters.
       They are also able to migrate long distances, with some traveling over 16,000 kilometers in a single year.
       Overall, Leatherbacks are a fascinating and vital species that play an important role in maintaining the health of our oceans.</p></td>
-      <td><img src="media\leather-back.jpg" alt="Green Turtle" class="imgen"></td>
+      <td><img src="leather-back.jpg" alt="Green Turtle" class="imgen"></td>
   </tr>
 </table>
 <br>
