--- a/kogsoda.html
+++ b/kogsoda.html
@@ -29,7 +29,7 @@
   <main>
     <section>
       <h1>Welcome to Kosgoda Turtle Hatchery</h1>
-      <img src="main_image.jpg" alt="Main Image">
+      <img src="kosgoda hatcheries.jpg" alt="Main Image">
       <p>This is the Kosgoda Turtle Hatchery, where we strive to protect and conserve sea turtles.</p>
     </section>
 
