--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
        <div class="navLink">
            <div class="menulink">
-             <img src="media\f754d7872ce12572f8f010ec858019ea.jpg" class="logo">
+             <img src="f754d7872ce12572f8f010ec858019ea.jpg" class="logo">
               <nav>
                 <ul>
                         <li> <a href="Catergoies.html">Turtle Catergoies</a></li>
@@ -20,7 +20,7 @@
                         <li><a href="P&D.html">Purchase & Donate Page</a></li>
                 </ul>
               </nav>
-              <img src="media\hamburger-menu-icon-svg-17.jpg" class="menuimg">
+              <img src="hamburger-menu-icon-svg-17.jpg" class="menuimg">
            </div>
       </div>
       <div class="line">
@@ -39,7 +39,7 @@
   <div id="notHead">
     <div class="row">
       <div class="img">
-        <img src="media\turtles with sri lankan inage.jpg" alt="" class="firstimg">
+        <img src="turtles with sri lankan inage.jpg" alt="" class="firstimg">
       </div>
       <section class="mySectiona">
         <header class="sect_title">
@@ -66,7 +66,7 @@
     </div>
    <div class="row">
      <div class="img">
-       <img src="media\plastic turtle 1.jpg" alt="" class="secondimg">
+       <img src="plastic turtle 1.jpg" alt="" class="secondimg">
      </div>
      <section class="mySectionb">
        <header class="sect_title">
@@ -83,7 +83,7 @@
    </div>
    <div class="row">
      <div class="img">
-       <img src="media\more for the kosgado hatch.jpg" alt="" class="thirdimg">
+       <img src="more for the kosgado hatch.jpg" alt="" class="thirdimg">
      </div>
      <section>
      <div class="mySectionc">
@@ -109,9 +109,9 @@
 <p>. Contact us at info@slturtles.org</p>
 <br>
 <div class="social-links">
-<a href="https://web.facebook.com/?_rdc=1&_rdr"><img src="media\facebooklogo.png" alt="facebooklogo"></a>
-<a href="https://twitter.com/"><img src="media\twiiterlogo.png" alt="twiiterlogo"></a>
-<a href="https://www.instagram.com/"><img src="media\instalogo.png" alt="instalogo"></a>
+<a href="https://web.facebook.com/?_rdc=1&_rdr"><img src="facebooklogo.png" alt="facebooklogo"></a>
+<a href="https://twitter.com/"><img src="twiiterlogo.png" alt="twiiterlogo"></a>
+<a href="https://www.instagram.com/"><img src="instalogo.png" alt="instalogo"></a>
 </div>
 </footer>
   </body>
