--- a/kogsoda.html
+++ b/kogsoda.html
@@ -11,7 +11,7 @@
   <header>
      <div class="navLink">
          <div class="menulink">
-           <img src="media\f754d7872ce12572f8f010ec858019ea.jpg" class="logo">
+           <img src="f754d7872ce12572f8f010ec858019ea.jpg" class="logo">
             <nav>
               <ul>
                       <li> <a href="Catergoies.html">Turtle Catergoies</a></li>
@@ -21,7 +21,7 @@
                       <li><a href="P&D.html">Purchase & Donate Page</a></li>
               </ul>
             </nav>
-            <img src="media\hamburger-menu-icon-svg-17.jpg" class="menuimg">
+            <img src="hamburger-menu-icon-svg-17.jpg" class="menuimg">
          </div>
     </div>
     <div class="line">
@@ -51,9 +51,9 @@
   <p>. Contact us at info@slturtles.org</p>
   <br>
   <div class="social-links">
-  <a href="https://web.facebook.com/?_rdc=1&_rdr"><img src="media\facebooklogo.png" alt="facebooklogo"></a>
-  <a href="https://twitter.com/"><img src="media\twiiterlogo.png" alt="twiiterlogo"></a>
-  <a href="https://www.instagram.com/"><img src="media\instalogo.png" alt="instalogo"></a>
+  <a href="https://web.facebook.com/?_rdc=1&_rdr"><img src="facebooklogo.png" alt="facebooklogo"></a>
+  <a href="https://twitter.com/"><img src="twiiterlogo.png" alt="twiiterlogo"></a>
+  <a href="https://www.instagram.com/"><img src="instalogo.png" alt="instalogo"></a>
   </div>
   </footer>
 </body>
