Update Threats to Turtles.html

--- a/Threats to Turtles.html
+++ b/Threats to Turtles.html
@@ -8,7 +8,7 @@
   <header>
      <div class="navLink">
          <div class="menulink">
-           <img src="media\f754d7872ce12572f8f010ec858019ea.jpg" class="logo">
+           <img src="f754d7872ce12572f8f010ec858019ea.jpg" class="logo">
             <nav>
               <ul>
                       <li> <a href="Catergoies.html">Turtle Catergoies</a></li>
@@ -18,7 +18,7 @@
                       <li><a href="P&D.html">Purchase & Donate Page</a></li>
               </ul>
             </nav>
-            <img src="media\hamburger-menu-icon-svg-17.jpg" class="menuimg">
+            <img src="hamburger-menu-icon-svg-17.jpg" class="menuimg">
          </div>
     </div>
     <div class="line">
@@ -28,7 +28,7 @@
   <h1>Threats to Turtles</h1>
 
   <h2>Threat 1: Habitat Loss and Degradation</h2>
-  <img src="https://example.com/threats_to_turtles.jpg" alt="Threats to Turtles">
+  <img src="habitat loss.jpg" alt="Threats to Turtles">
 
   <p>
     Habitat loss and degradation pose a significant threat to turtle populations around the world. Coastal development, urbanization, pollution, and climate change are some of the leading causes of habitat destruction. As turtles rely on specific nesting beaches and feeding grounds, the alteration or destruction of these habitats can have severe consequences.
@@ -49,7 +49,7 @@
   </p>
 
   <h2>Threat 2: Pollution</h2>
-  <img src="media\turtle in trash.jpg" class="">
+  <img src="turtle in trash.jpg" class="">
 
  <p>
    Pollution, including marine debris, oil spills, and chemical contaminants, poses a significant threat to turtle populations. These pollutants can directly harm turtles through ingestion or entanglement, as well as indirectly impact their habitats and food sources.
@@ -70,11 +70,11 @@
  </p>
 
   <h2>Threat 3: Illegal Wildlife Trade</h2>
-  <img src="media\illegal trade.jpg" alt="">
+  <img src="illegal trade.jpg" alt="">
 
   <h2>Other Hatcheries</h2>
   <ul>
-    <li><a href="kosgoda.html" id="linka"><img src="media\kosgoda hatcheries.jpg" alt="Kosgoda Hatchery"> Kosgoda Hatchery</a></li>
+    <li><a href="kosgoda.html" id="linka"><img src="kosgoda hatcheries.jpg" alt="Kosgoda Hatchery"> Kosgoda Hatchery</a></li>
     <li><a href="bentota.html" id="linkb">Bentota Hatchery</a></li>
   </ul>
   </div>
