--- a/Hikkaduwa.html
+++ b/Hikkaduwa.html
@@ -9,7 +9,7 @@
     <header>
          <div class="navLink">
              <div class="menulink">
-               <img src="media\f754d7872ce12572f8f010ec858019ea.jpg" class="logo">
+               <img src="f754d7872ce12572f8f010ec858019ea.jpg" class="logo">
                 <nav>
                   <ul>
                           <li> <a href="Catergoies.html">Turtle Catergoies</a></li>
@@ -19,7 +19,7 @@
                           <li><a href="P&D.html">Purchase & Donate Page</a></li>
                   </ul>
                 </nav>
-                <img src="media\hamburger-menu-icon-svg-17.jpg" class="menuimg">
+                <img src="hamburger-menu-icon-svg-17.jpg" class="menuimg">
              </div>
              <h1>Hikkaduwa Turtle Hatchery</h1>
         </div>
