--- a/Catergoies.html
+++ b/Catergoies.html
@@ -56,9 +56,9 @@
   <p>&copy; 2023 Daweng Pam. All rights reserved</p>
   <p>. Contact us at info@slturtles.org</p>
   <div class="social-links">
-  <a href="https://web.facebook.com/?_rdc=1&_rdr"><img src="media\facebooklogo.png" alt="facebooklogo"></a>
-  <a href="https://twitter.com/"><img src="media\twiiterlogo.png" alt="twiiterlogo"></a>
-  <a href="https://www.instagram.com/"><img src="media\instalogo.png" alt="instalogo"></a>
+  <a href="https://web.facebook.com/?_rdc=1&_rdr"><img src="facebooklogo.png" alt="facebooklogo"></a>
+  <a href="https://twitter.com/"><img src="twiiterlogo.png" alt="twiiterlogo"></a>
+  <a href="https://www.instagram.com/"><img src="instalogo.png" alt="instalogo"></a>
   </div>
   </footer>
   </body>
