--- a/Hikkaduwa.html
+++ b/Hikkaduwa.html
@@ -6,25 +6,26 @@
     <title>Hikkaduwa Turtle Hatchery</title>
   </head>
   <body>
-    <header>
-         <div class="navLink">
-             <div class="menulink">
-               <img src="f754d7872ce12572f8f010ec858019ea.jpg" class="logo">
-                <nav>
-                  <ul>
-                          <li> <a href="Catergoies.html">Turtle Catergoies</a></li>
-                          <li> <a href="Hikkaduwa.html">Hikkaduwa Turtle Hatcheries</a></li>
-                          <li><a href="Threats to Turtles.html">Threats To Turtles</a></li>
-                          <li><a href="Other.html">Other Turtles Hatcheries</a></li>
-                          <li><a href="P&D.html">Purchase & Donate Page</a></li>
-                  </ul>
-                </nav>
-                <img src="hamburger-menu-icon-svg-17.jpg" class="menuimg">
-             </div>
-             <h1>Hikkaduwa Turtle Hatchery</h1>
-        </div>
-        <div class="line">
-        </div>
+    <div class="navLink">
+              <div class="menulink">
+                <img src="f754d7872ce12572f8f010ec858019ea.jpg" class="logo">
+                 <nav>
+                   <ul id="menuList">
+                           <li> <a href="Catergoies.html">Turtle Catergoies</a></li>
+                           <li> <a href="Hikkaduwa.html">Hikkaduwa Turtle Hatcheries</a></li>
+                           <li><a href="Threats to Turtles.html">Threats To Turtles</a></li>
+                           <li><a href="Other.html">Other Turtles Hatcheries</a></li>
+                           <li><a href="P&D.html">Purchase & Donate Page</a></li>
+                   </ul>
+                 </nav>
+                 <img src="hamburger-menu-icon-svg-17.jpg" class="menuimg" onclick="togglemenu()">
+              </div>
+         </div>
+         <div id="mainContainer">
+      <div class="line">
+      </div>
+      <h1>Hikkaduwa Turtle Hatchery</h1>
+    </div>
     </header>
     <section>
       <h2>About the Hatchery</h2>
@@ -38,10 +39,18 @@
       </ul>
       <h2>Photo Gallery</h2>
       <div class="gallery">
-        <img src="https://via.placeholder.com/150" alt="Turtle Hatchery">
-        <img src="https://via.placeholder.com/150" alt="Turtle Hatchery">
-        <img src="https://via.placeholder.com/150" alt="Turtle Hatchery">
-        <img src="https://via.placeholder.com/150" alt="Turtle Hatchery">
+        <img src="morevisit.jpg" alt="Turtle Hatchery">
+        <img src="1244809644-54e4e783c126985b33b3367fa785ae151c2ed939a5a055aa6e9d0f88c2aa081f-d_640 (1).jpg" alt="Turtle Hatchery">
+        <img src="inner-banner_Mob_Bentota-Turtle-Hatchery-720x720-1.jpg" alt="Turtle Hatchery">
+        <img src="place-2016-02-2-8-Kosgodaseaturtleconservationproject5e7ce81d62d208b56a4cfd00b15df599.jpg" alt="Turtle Hatchery">
+
+      </div>
+      <div class="gallery">
+        <img src="largeholdingimage.webp" alt="Turtle Hatchery">
+        <img src="HomePage Main Image - Copy.jpg" alt="Turtle Hatchery">
+        <img src="visit.jpg" alt="Turtle Hatchery">
+        <img src="turtles with sri lankan inage.jpg" alt="Turtle Hatchery">
+
       </div>
       <h2>Location</h2>
       <div class="location">
@@ -52,4 +61,21 @@
     <p>&copy; 2023 Daweng Pam. All rights reserved.</p>
     <p>Contact us at info@slturtles.org</p>
     </footer>
+    <script>
+         var menuList = document.getElementById("menuList");
+         var mainContainer = document.getElementById("mainContainer");
+
+         menuList.style.maxHeight = "0%";
+
+         function togglemenu(){
+         if(menuList.style.maxHeight == "0%") {
+         menuList.style.maxHeight = "150px";
+         mainContainer.style.marginTop = "150px";
+         }
+         else {
+        menuList.style.maxHeight = "0%";
+        mainContainer.style.marginTop = "0px";
+        }
+        }
+    </script>
     </html>
