--- a/Catergoies.html
+++ b/Catergoies.html
@@ -7,22 +7,24 @@
   </head>
   <body>
     <header>
-       <div class="navLink">
-           <div class="menulink">
-             <img src="f754d7872ce12572f8f010ec858019ea.jpg" class="logo">
-              <nav>
-                <ul>
-                        <li> <a href="Catergoies.html">Turtle Catergoies</a></li>
-                        <li> <a href="Hikkaduwa.html">Hikkaduwa Turtle Hatcheries</a></li>
-                        <li><a href="Threats to Turtles.html">Threats To Turtles</a></li>
-                        <li><a href="Other.html">Other Turtles Hatcheries</a></li>
-                        <li><a href="P&D.html">Purchase & Donate Page</a></li>
-                </ul>
-              </nav>
-              <img src="hamburger-menu-icon-svg-17.jpg" class="menuimg">
-           </div>
-      </div>
+      <div class="navLink">
+          <div class="menulink">
+            <img src="f754d7872ce12572f8f010ec858019ea.jpg" class="logo">
+             <nav>
+               <ul id="menuLista">
+                 <li> <a href="Catergoies.html">Turtle Catergoies</a></li>
+                 <li> <a href="Hikkaduwa.html">Hikkaduwa Turtle Hatcheries</a></li>
+                 <li><a href="Threats to Turtles.html">Threats To Turtles</a></li>
+                 <li><a href="Other.html">Other Turtles Hatcheries</a></li>
+                 <li><a href="P&D.html">Purchase & Donate Page</a></li>
+               </ul>
+             </nav>
+             <img src="hamburger-menu-icon-svg-17.jpg" class="menuimg" onclick="togglemenua()">
+          </div>
+     </div>
+     <div id="mainContainera">
       <div class="line">
+
       </div>
     </header>
     <section>
@@ -36,6 +38,8 @@
          <h4>So, join us as we dive into the world of the Turtle Species of Sri Lanka!</h4>
        </p>
     </section>
+    </div>
+
     <table>
   <caption>Turtle Species in Sri Lanka</caption>
   <thead>
@@ -61,5 +65,23 @@
   <a href="https://www.instagram.com/"><img src="instalogo.png" alt="instalogo"></a>
   </div>
   </footer>
+  <script>
+       var menuList = document.getElementById("menuLista");
+       var mainContainer = document.getElementById("mainContainera");
+
+       menuList.style.maxHeight = "1%";
+
+
+       function togglemenua(){
+       if(menuList.style.maxHeight <= "1%") {
+       menuList.style.maxHeight = "150px";
+       mainContainer.style.marginTop = "200px";
+       }
+       else {
+      menuList.style.maxHeight = "0.5%";
+      mainContainer.style.marginTop = "0px";
+      }
+     }
+  </script>
   </body>
 </html>
